# dummy-pkg-for-tests-with-deps

./: LICENSE  README.md  pyproject.toml
src/dummy_pkg_for_tests_with_deps/: shrubbery.py
